# KernelSU

.github/manifests/: android-16.1-avd_x86_64.xml
.github/patchs/: 6.12-x86-add-syscall-hook-support.patch  6.18-x86-add-indirect-safe-syscall-dispatch.patch  6.18-x86-add-syscall-hardening-cmdline-switch.patch  6.6-x86-add-indirect-safe-syscall-dispatch.patch  6.6-x86-add-syscall-hardening-cmdline-switch.patch
.github/scripts/: build_gki_with_docker.sh  kernel_build.py  kernel_patch.py  mkbootimg.py
.github/workflows/: avd-kernel.yml  build-kernel-a12.yml  build-kernel-a13.yml  build-kernel-a14.yml  build-kernel-a15.yml  build-kernel-a16.yml  build-kernel-avd.yml  build-manager.yml  ddk-playground.yml  gki-kernel.yml  kernel-lkm-avd.yml  kernel-lkm-gki.yml
kernel/: BUILD.bazel  Kbuild  Makefile  app_profile.c  app_profile.h  ksu.c
manager/: build.gradle.kts
manager/app/: build.gradle.kts
manager/app/src/main/: AndroidManifest.xml
manager/app/src/main/res/drawable/: ic_adb_rounded.xml  ic_arrow_drop_up_rounded.xml  ic_article_rounded_filled.xml  ic_aspect_ratio_rounded.xml  ic_block_rounded.xml  ic_blur_on_rounded.xml  ic_brightness_1_rounded_filled.xml  ic_brightness_2_rounded_filled.xml  ic_brightness_5_rounded_filled.xml  ic_bug_report_rounded_filled.xml  ic_call_to_action_rounded.xml  ic_check_circle_rounded.xml  ic_chrome_reader_mode_rounded.xml  ic_cloud_rounded.xml  ic_contact_page_rounded_filled.xml  ic_content_copy_rounded_filled.xml  (+42 more)
manager/gradle/: libs.versions.toml
userspace/ksud/: build.rs
userspace/ksud/src/: cli.rs  module.rs
(+230 files in other folders)
